# ReShade.psc

./: .editorconfig  CMakeWorkspaceSettings.json  README.md
.github/workflows/: docs.yml
addon/: CMakeLists.txt
addon/include/: addon.hpp
addon/include/addon/: api.hpp  config.hpp.in  utils.hpp  version.hpp
addon/src/: addon.cpp  addon_internal.hpp  api.cpp  memoize.hpp
data/Scripts/Source/User/: ReShade.psc
docs/: Doxyfile
plugins/F4/: CMakeLists.txt  commonlibf4.patch  main.cpp
plugins/F4NG/: CMakeLists.txt  CMakePresets.json  main.cpp  xmake.lua
